--- a/css/main.css
+++ b/css/main.css
@@ -155,12 +155,6 @@ ul.navega li {
   align-items: center;
 }
 
-/*Footer*/
-.position-relative {
-  margin-left: 40px;
-  margin-bottom: 40px;
-}
-
 /*Main Index*/
 .container text-center {
   column-span: 15px;
@@ -284,6 +278,12 @@ ul.navega li {
   }
 }
 /*Galeria*/
+.grid-galeria div {
+  box-shadow: 10px 10px 16px 0px rgba(0, 0, 0, 0.75);
+  border-radius: 6px;
+  overflow: hidden;
+}
+
 .grid-galeria {
   display: grid;
   grid-template-columns: 1fr;
@@ -291,12 +291,7 @@ ul.navega li {
   margin: 1rem 3rem 3rem 3rem;
   gap: 1rem;
 }
-.grid-galeria div {
-  box-shadow: 10px 10px 16px 0px rgba(0, 0, 0, 0.75);
-  border-radius: 6px;
-  overflow: hidden;
-}
-.grid-galeria .img {
+.grid-galeria img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -304,7 +299,7 @@ ul.navega li {
 .grid-galeria .img-1 {
   position: relative;
 }
-.grid-galeria .texto-1 {
+.grid-galeria .img-1 .texto-1 {
   position: absolute;
   top: 0;
   left: 0;
@@ -320,21 +315,109 @@ ul.navega li {
   opacity: 0;
   transition: opacity 1.5s;
 }
-.grid-galeria .texto-1:hover {
+.grid-galeria .img-1 .texto-1:hover {
   opacity: 1;
   transition: opacity 1.5s;
   cursor: pointer;
 }
-.grid-galeria .contenedor-dos-columnas {
+.grid-galeria .img-2 {
+  position: relative;
+}
+.grid-galeria .img-2 .texto-2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.749), rgba(255, 255, 255, 0.462));
   display: flex;
-  flex-wrap: wrap;
-  grid-template-columns: 2fr;
-  gap: 30px;
-  justify-content: space-evenly;
-  row-gap: 25px;
-  padding-bottom: 20px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 15px;
+  opacity: 0;
+  transition: opacity 1.5s;
+}
+.grid-galeria .img-2 .texto-2:hover {
+  opacity: 1;
+  transition: opacity 1.5s;
+  cursor: pointer;
+}
+.grid-galeria .img-3 {
+  position: relative;
+}
+.grid-galeria .img-3 .texto-3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.749), rgba(255, 255, 255, 0.462));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 15px;
+  opacity: 0;
+  transition: opacity 1.5s;
+}
+.grid-galeria .img-3 .texto-3:hover {
+  opacity: 1;
+  transition: opacity 1.5s;
+  cursor: pointer;
+}
+.grid-galeria .img-4 {
+  position: relative;
+}
+.grid-galeria .img-4 .texto-4 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.749), rgba(255, 255, 255, 0.462));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 15px;
+  opacity: 0;
+  transition: opacity 1.5s;
+}
+.grid-galeria .img-4 .texto-4:hover {
+  opacity: 1;
+  transition: opacity 1.5s;
+  cursor: pointer;
+}
+.grid-galeria .img-5 {
+  position: relative;
+}
+.grid-galeria .img-5 .texto-5 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.749), rgba(255, 255, 255, 0.462));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 15px;
+  opacity: 0;
+  transition: opacity 1.5s;
+}
+.grid-galeria .img-5 .texto-5:hover {
+  opacity: 1;
+  transition: opacity 1.5s;
+  cursor: pointer;
 }
 
+/*contacto*/
 .contenedor {
   margin-top: 10px;
   display: flex;
@@ -427,6 +510,56 @@ ul.navega li {
   background-color: #0288d1;
   border-color: red;
   border-width: 5px;
+}
+
+/*Footer*/
+.position-relative {
+  margin-left: 40px;
+  margin-bottom: 40px;
+}
+
+/*Media Query*/
+@media screen and (min-width: 768px) {
+  header {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 15px;
+  }
+  header header nav ul li a {
+    color: rgb(248, 245, 245);
+  }
+  .grid-galeria {
+    grid-template-columns: repeat(2, 1fr);
+    grid-area: repeat(3, 300px);
+    grid-template-areas: "img1 img2" "img3 img3" "img4 img5";
+  }
+  .img-1 {
+    grid-area: img1;
+  }
+  .img-2 {
+    grid-area: img2;
+  }
+  .img-3 {
+    grid-area: img3;
+  }
+  .img-4 {
+    grid-area: img4;
+  }
+  .img-5 {
+    grid-area: img5;
+  }
+}
+@media screen and (min-width: 1024px) {
+  header nav ul li a {
+    color: rgb(12, 13, 13);
+    align-items: center;
+    display: inline-flexbox;
+  }
+  .grid-galeria {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 30vh);
+    grid-template-areas: "img1 img2 img3" "img1 img4 img4" "img1 img5 img5";
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
