--- a/scss/pages/_main-galeria.scss
+++ b/scss/pages/_main-galeria.scss
@@ -1,26 +1,26 @@
 /*Galeria*/
 
+
+.grid-galeria div{
+    box-shadow: 10px 10px 16px 0px rgba(0,0,0,0.75);
+    border-radius: 6px;
+    overflow: hidden;           
+    }
+
 .grid-galeria{
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(5,300px);
     margin: 1rem 3rem 3rem 3rem;
     gap: 1rem;
-    div{
-        box-shadow: 10px 10px 16px 0px rgba(0,0,0,0.75);
-        border-radius: 6px;
-        overflow: hidden;           
-        }
-    .img{
+    img{
         width: 100%;
         height: 100%;
-        object-fit: cover
-    }   
-
-.img-1{
-    position: relative;
+        object-fit: cover;
     }
-.texto-1{
+    .img-1{
+    position: relative;
+    .texto-1{
     position: absolute;
     top: 0;
     left: 0;
@@ -40,80 +40,11 @@
         transition: opacity 1.5s;
         cursor: pointer; 
         } 
-.img-2{
-    position: relative;
-}
-.texto-2{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.749), rgba(255, 255, 255, 0.462));
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 15px;
-    opacity: 0;
-    transition: opacity 1.5s;
-    &:hover{
-        opacity: 1;
-        transition: opacity 1.5s;
-        cursor: pointer;
     }
-.img-3{
-    position: relative;
-}
-.texto-3{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.749), rgba(255, 255, 255, 0.462));
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 15px;
-    opacity: 0;
-    transition: opacity 1.5s;
-    &:hover{
-        opacity: 1;
-        transition: opacity 1.5s;
-        cursor: pointer;
-    }
-.img-4{
-    position: relative;
-}
-.texto-4{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.749), rgba(255, 255, 255, 0.462));
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 15px;
-    opacity: 0;
-    transition: opacity 1.5s;
-    &:hover{
-        opacity: 1;
-        transition: opacity 1.5s;
-        cursor: pointer;
-    }
-    .img-5{
+    }    
+    .img-2{
         position: relative;
-    }
-    
-    .texto-5{
+        .texto-2{
         position: absolute;
         top: 0;
         left: 0;
@@ -131,27 +62,80 @@
         &:hover{
             opacity: 1;
             transition: opacity 1.5s;
-            cursor: pointer;
+            cursor: pointer; 
+            } 
         }
     }
-}
-    
-}
-}  
-}
-.contenedor{
-    margin-top: 10px;
-    display: flex;
-    padding: 25px;
-}
-
-.contenedor-dos-columnas{
-    display: flex;
-    flex-wrap: wrap;
-    grid-template-columns: 2fr;
-    gap: 30px;    
-    justify-content: space-evenly;
-    row-gap: 25px;
-    padding-bottom: 20px;
-}
+    .img-3{
+        position: relative;
+        .texto-3{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to right, rgba(255, 255, 255, 0.749), rgba(255, 255, 255, 0.462));
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 15px;
+        opacity: 0;
+        transition: opacity 1.5s;
+        &:hover{
+            opacity: 1;
+            transition: opacity 1.5s;
+            cursor: pointer; 
+            } 
+        }
+    } 
+    .img-4{
+        position: relative;
+        .texto-4{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to right, rgba(255, 255, 255, 0.749), rgba(255, 255, 255, 0.462));
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 15px;
+        opacity: 0;
+        transition: opacity 1.5s;
+        &:hover{
+            opacity: 1;
+            transition: opacity 1.5s;
+            cursor: pointer; 
+            } 
+        }
+    }
+    .img-5{
+        position: relative;
+        .texto-5{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to right, rgba(255, 255, 255, 0.749), rgba(255, 255, 255, 0.462));
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 15px;
+        opacity: 0;
+        transition: opacity 1.5s;
+        &:hover{
+            opacity: 1;
+            transition: opacity 1.5s;
+            cursor: pointer; 
+            } 
+        }
+    }
 }
