--- a/css/styles.css
+++ b/css/styles.css
@@ -449,7 +449,7 @@ img.muy-pequena{
 }
 
 
-*/
+
 
 #contacto-section {
     max-width: 500px;
@@ -524,7 +524,7 @@ img.muy-pequena{
     background-color: #0288d1;
     border-color: red;
     border-width: 5px;
-}*/
+}
 
 
 /*
