--- a/scss/utilities/_globals.scss
+++ b/scss/utilities/_globals.scss
@@ -98,3 +98,17 @@ img.muy-pequena{
     width: 50px;
     height: 50px;
 }
+.btn{
+    background-color: #0288d1;
+    padding-bottom: 10px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    &:hover{
+        background-color: #0288d1;
+        border-color: red;
+        border-width: 5px;
+    }
+    }
