--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,6 @@
+@import "utilities/variables";
+@import "utilities/mixin";
+@import "utilities/extend";
 @import "utilities/reset";
 @import "utilities/globals";
 @import "components/header";
