--- a/scss/pages/_main-destinos.scss
+++ b/scss/pages/_main-destinos.scss
@@ -5,7 +5,7 @@
     height: 420px;
     border-radius: 20px 0px 20px 20px;
     overflow: hidden;
-    box-shadow: 10px 12px 28px 10px rgba(0,0,0,0.75);
+    box-shadow: 10px 12px 28px 10px  #1E1E1E;
     position: relative;
     &:hover{
         border-color: red;
