--- a/css/main.css
+++ b/css/main.css
@@ -232,7 +232,7 @@ ul.navega li {
   height: 420px;
   border-radius: 20px 0px 20px 20px;
   overflow: hidden;
-  box-shadow: 10px 12px 28px 10px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 12px 28px 10px #1E1E1E;
   position: relative;
 }
 .card:hover {
