--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -17,14 +17,15 @@ header{
             li{
                 a{
                 color: #f4f2f8;
-                text-decoration: solid ;
+                text-transform: uppercase;
+                font-weight: bold;
                 font-size: 20px;
                 font-weight: 300;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                     &:hover{
                         color: red;
                         font-size: 25px;
-                        font-weight: bold;
+                        font-weight: bolder;
                         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                         }
                     }  
