--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -18,6 +18,8 @@ header{
                 a{
                 color: #f4f2f8;
                 text-transform: uppercase;
+                text-decoration: none;
+                text-underline-offset: 0;
                 font-weight: bold;
                 font-size: 20px;
                 font-weight: 300;
