--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,10 @@ header nav ul {
 }
 header nav ul li a {
   color: #f4f2f8;
-  text-decoration: solid;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-underline-offset: 0;
+  font-weight: bold;
   font-size: 20px;
   font-weight: 300;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -157,7 +160,7 @@ header nav ul li a {
 header nav ul li a:hover {
   color: red;
   font-size: 25px;
-  font-weight: bold;
+  font-weight: bolder;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
@@ -490,7 +493,7 @@ ul.navega li {
 }
 #contacto-section [type=submit] {
   width: 50%;
-  margin-left: 110px;
+  margin-left: 100px;
   background-color: #0288d1;
   color: #fff;
   font-size: 20px;
@@ -520,6 +523,8 @@ ul.navega li {
   }
   header header nav ul li a {
     color: rgb(248, 245, 245);
+    text-decoration: none;
+    text-underline-offset: 0;
   }
   header ul.navega li {
     display: inline;
@@ -555,6 +560,8 @@ ul.navega li {
     color: rgb(12, 13, 13);
     align-items: center;
     display: inline-flexbox;
+    text-decoration: none;
+    text-underline-offset: 0;
   }
   .grid-galeria {
     grid-template-columns: repeat(3, 1fr);
