--- a/scss/utilities/_media-queries.scss
+++ b/scss/utilities/_media-queries.scss
@@ -7,6 +7,8 @@
         padding: 15px;
         header nav ul li a{
             color: rgb(248, 245, 245);
+            text-decoration: none;
+            text-underline-offset: 0;
         }
     ul.navega li{
         display: inline;
@@ -52,6 +54,8 @@
         color: rgb(12, 13, 13);
         align-items: center;
         display: inline-flexbox;
+        text-decoration: none;
+        text-underline-offset: 0;
     }
     
 //Galeria//
